messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-blue-deployment
  labels:
    app: django
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django
      version: green
  template:
    metadata:
      labels:
        app: django
        version: green
    spec:
      containers:
      - name: django-container
        image: ahmed2013/django-app:v2.0
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
