messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-blue-deployment
  labels:
    app: django
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: django
      version: blue
  template:
    metadata:
      labels:
        app: django
        version: blue
    spec:
      containers:
      - name: django-container
        image: ahmed2013/django-app:v2.0
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---

apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8000 #used outside by another services
      targetPort: 8000 #inside pod
  type: ClusterIP
